$Id$                       -*-text-*-


**** 1.12 [unreleased]

Fix rt.cpan.org #122586

	Persistent UDP reports false timeouts

Fix rt.cpan.org #122352

	bgsend(): TCP retry can stall for IO::Socket::IP before 0.38


**** 1.11 Jun 26, 2017

Fix rt.cpan.org #122138

	Send a UDP query with udppacketsize=512

Feature
	Extract default resolver configuration from OS/390 MVS datasets.
	Thanks to Sandra Carroll and Yaroslav Kuzmin for their assistance.


**** 1.10 May 5, 2017

Fix rt.cpan.org #120748

	Net::DNS::Resolver::MSWin32 critical issue
	Thanks to Dmytro Zagashev for his valuable assistance during
	the investigation which exposed five distinct issues.

Feature rt.cpan.org #18819

	Perl 5.22.0 puts EBCDIC character encoding back on the agenda.
	Thanks to Yaroslav Kuzmin for successful test build on os390.


**** 1.09 March 24, 2017

Fix rt.cpan.org #120542

	Fails tests when no "." in @INC

Fix rt.cpan.org #120470

	Fragmented TCP length not correctly reassembled

Feature rt.cpan.org #75357

	Add mechanism to encode/decode EDNS option octet strings


**** 1.08 February 20, 2017

Fix rt.cpan.org #120208

	Unable to install 1.07 in local::lib environment

Feature rt.cpan.org #119679

	Net::DNS::Nameserver: UpdateHandler for responding to UPDATE packets

Feature rt.cpan.org #75357

	Net::DNS::Nameserver: optionmask (similar to headermask) added
	to allow user to set EDNS options in reply packet

Discontinue support for pre-5.6 perl

	Remove pre-5.6 workarounds and outdated language features


**** 1.07 December 29, 2016

Fix rt.cpan.org #118598/#108908

	Serious Makefile.PL issues
	"make install" now suppressed if pre-1.01 version detected

Fix rt.cpan.org #115558

	Net::DNS::Nameserver does not allow EDNS replies

Fix rt.cpan.org #114917

	Net::DNS::ZoneFile fails to parse mixed case mnemonics

Fix rt.cpan.org #114876

	Use of uninitialized value in lc at MSWin32.pm line 77

Fix rt.cpan.org #114819

	Net::DNS fails to compile with taint checks enabled

Feature