@@ -20,38 +20,24 @@ Net::DNS::RR::CDS - DNS CDS resource record
 use integer;
 
 
-sub _format_rdata {			## format rdata portion of RR string.
-	my $self = shift;
-
-	return $self->SUPER::_format_rdata()
-			if scalar grep $_, @{$self}{qw(keytag algorithm digtype)};
-	return defined $self->{algorithm} ? '0 0 0 0' : '';	# RFC8078 mandated notation
-}
-
-
-sub _parse_rdata {			## populate RR from rdata in argument list
-	my $self = shift;
-
-	return $self->SUPER::_parse_rdata(@_) if $_[1];
-	die 'invalid RDATA (DS delete)' if "@_" !~ m/^0 0 0/;	 # ignore digest
-	$self->algorithm(0);
-}
-
-
 sub algorithm {
 	my ( $self, $arg ) = @_;
-
 	return $self->SUPER::algorithm($arg) if $arg;
 	return $self->SUPER::algorithm() unless defined $arg;
-	@{$self}{qw(keytag algorithm digtype digestbin)} = ( 0, 0, 0, '' );
+	@{$self}{qw(keytag algorithm digtype)} = ( 0, 0, 0 );
 }
 
 
 sub digtype {
 	my ( $self, $arg ) = @_;
+	$self->SUPER::digtype( $arg ? $arg : () );
+}
 
-	return $self->SUPER::digtype($arg) if $arg;
-	return $self->SUPER::digtype();
+
+sub digest {
+	my $self = shift;
+	return $self->SUPER::digest(@_) unless defined( $_[0] ) && length( $_[0] ) < 2;
+	return $self->SUPER::digestbin( $_[0] ? '' : chr(0) );
 }
 
 
@@ -114,6 +100,6 @@ DEALINGS IN THE SOFTWARE.
 
 =head1 SEE ALSO
 
-L<perl>, L<Net::DNS>, L<Net::DNS::RR>, L<Net::DNS::RR::DS>, RFC7344, RFC8078
+L<perl>, L<Net::DNS>, L<Net::DNS::RR>, L<Net::DNS::RR::DS>, RFC7344, RFC8078(erratum 5049)
 
 =cut
